--- a/static/css/DONOTEDIT.css
+++ b/static/css/DONOTEDIT.css
@@ -1,3 +1,7 @@
+/* We use CSS and SCSS to format our website that is easy on the eyes and allows both employees and managers
+    to navigate the interface. */
+/* This begins the stylization of the HTML scheduling page, in terms of font size, font type, and page layout.
+   Being SCSS, we can use what we entered above as functions or defniitions that we later reuse in our code */
 *,
 *:before,
 *:after {
@@ -9,7 +13,7 @@ html {
 }
 
 body {
-  background: #2c2a29;
+  background: #292522;
   font-family: "Titillium Web", sans-serif;
 }
 
@@ -188,23 +192,4 @@ textarea {
 .forgot {
   margin-top: -20px;
   text-align: right;
-}
-
-/* For WebKit-based browsers (Chrome, Safari, Edge, Opera) */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    appearance: none; /* standard */
-    margin: 0; /* Optional: removes any default margin */
-}
-
-/* For Firefox & standard */
-input[type="number"] {
-    -moz-appearance: textfield; /* Firefox */
-    appearance: textfield;      /* standard (or use 'none' to remove all native styling) */
-}
-
-/* For general compatibility (though the above cover most cases) */
-input[type=number] {
-    appearance: textfield;
 }
