--- a/static/css/formpage.scss
+++ b/static/css/formpage.scss
@@ -1,3 +1,9 @@
+/* We use CSS and SCSS to format our website that is easy on the eyes and allows both employees and managers
+    to navigate the interface. Using SCSS makes it easier for us to define certain functions for
+    colors and other stylizations, which then create a CSS file that is read by the HTML/Python
+    application. The only file that ever needs changing is the SCSS file, and the CSS file should not be touched.
+*/
+
 $body-bg: #292522;
 $form-bg: #13232f;
 $white: #ffffff;
@@ -13,6 +19,9 @@ $thin: 300;
 $normal: 400;
 $bold: 600;
 $br: 4px;
+
+/* This begins the stylization of the HTML scheduling page, in terms of font size, font type, and page layout.
+   Being SCSS, we can use what we entered above as functions or defniitions that we later reuse in our code */
 
 *,
 *:before,
