--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Form Page</title>
+  <title>Schedule System</title>
   <link rel="stylesheet" href="/static/css/formpage.css" />
 </head>
 <body>
