--- a/templates/index.html
+++ b/templates/index.html
@@ -19,18 +19,22 @@
       <div class="tab-content">
         <div id="signup">   
           <h1>UKG Enhanced Scheduling System</h1>
-          
+          {% if error %}
+          <p style="color:#ffdddd; background:#661111; padding:8px; border-radius:4px;">{{ error }}</p>
+          {% endif %}
+
           <form action="/" method="post">
 
           <div class="field-wrap">
             <label>
               Employee ID<span class="req">*</span>
             </label>
-            <input id="employee_id"
-                   name="employee_id" 
-                   type="number" 
-                   inputmode="numeric"
-                   required />
+              <input id="employee_id"
+                     name="employee_id" 
+                     type="text" 
+                     inputmode="numeric"
+                     pattern="\d*" 
+                     required />
           </div>
 
           <button type="submit" class="button button-block">Sign In</button>
@@ -43,6 +47,8 @@
       
 </div> <!-- /form -->
 
+<!-- jQuery is required by the included formpage.js; load from CDN before the script -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJ+Y3bZ6k2m7rKkQ5c5o2Q5c5o2Q5c5o2Q5c=" crossorigin="anonymous"></script>
 <script src="/static/js/formpage.js"></script>
 </body>
 </html>
