Made PTO Page, needs formatting

--- a/static/css/formpage.scss
+++ b/static/css/formpage.scss
@@ -140,7 +140,7 @@ textarea {
   background: none;
   background-image: none;
   border: 1px solid $gray-light;
-  color: $white;
+  color: $main;
   border-radius: 0;
   transition: border-color 0.25s ease, box-shadow 0.25s ease;
   &:focus {
