--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,8 @@
                      name="employee_id" 
                      type="text" 
                      inputmode="numeric"
-                     pattern="\d*" 
+                     pattern="\d*"
+                     class="employee-id-input" 
                      required />
           </div>
 
