Add employee ID input styling and include CSS link in HTML templates

--- a/static/css/formpage.css
+++ b/static/css/formpage.css
@@ -281,3 +281,8 @@ input[type="date"]:valid {
   margin-top: -20px;
   text-align: right;
 }
+
+.employee-id-input {
+  color: #ffffff;
+  -webkit-text-fill-color: #ffffff !important;
+}
