--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 /* Ideally, we want the structure to be very simple and easy for both the employees and managers to navigate.
 /* In this first section, we begin with rudamentary HTML headers to begin our webpage.-->
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/formpage.css') }}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
