--- a/templates/pto.html
+++ b/templates/pto.html
@@ -1,3 +1,7 @@
+
+
+<link rel="stylesheet" href="{{ url_for('static', filename='css/formpage.css') }}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
